# dpImApp

./: CMakeLists.txt  conanfile.py
.github/workflows/: ci.yml
cmake/: Dependencies.cmake
examples/: BigAppStructure.cpp  CMakeLists.txt  CloseButton.cpp  DockSpace.cpp  HelloWorld.cpp  ImGuiDemo.cpp  MainWindow.cpp
include/dpImApp/: Config.hpp  Export.hpp  ImGuiInfos.hpp  dpImApp.hpp  dpImApp.inl
src/: AppImpl.hpp  AppImpl.inl  AppImplInterface.hpp  CMakeLists.txt  ImGuiExampleGlfwOpenGl3MainPatched.cpp  ImGuiGlfwBackend.cpp  ImGuiOpenGl3Backend.cpp  dpImApp.cpp
tests/: CMakeLists.txt  Settings.cpp  Simple.cpp
